--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "bootstrap": "3.1.0",
-    "jquery": "2.1.0"
+    "jquery": "2.1.0",
+    "normalize-css": "normalize.css#~3.0.3"
   }
 }
