--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bootstrap": "3.1.0",
     "jquery": "2.1.0",
+    "moment": "2.10.6",
     "normalize-css": "normalize.css#~3.0.3"
   }
 }
