--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.9.6",
+    "ejs": "^2.3.4",
     "eventproxy": "^0.3.4",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "mongoose": "^4.1.10",
     "node-uuid": "^1.4.3",
+    "nodemailer": "^1.8.0",
+    "utility": "^1.4.0",
     "validator": "^4.1.0"
   },
   "devDependencies": {},
