--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.9.6",
-    "ejs": "^2.3.4",
+    "ejs-mate": "^2.3.0",
     "eventproxy": "^0.3.4",
     "express": "^4.13.3",
-    "jade": "^1.11.0",
     "mongoose": "^4.1.10",
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.8.0",
