--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs-mate": "^2.3.0",
     "eventproxy": "^0.3.4",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "mongoose": "^4.1.10",
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.8.0",
