--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eventproxy": "^0.3.4",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.10",
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.8.0",
