--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs-mate": "^2.3.0",
     "eventproxy": "^0.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongoose": "^4.1.10",
